NINE-384 corrected auth bonus

--- a/locales/en.json
+++ b/locales/en.json
@@ -68,7 +68,7 @@
     "terms": "I am {minAge} years old and I accept the{br} {terms} and {policy}",
     "step2Title": "Please, fill the information below!",
     "thanksRegistration": "Thank you for registration",
-    "registrationBonus": "100% up to $150",
+    "registrationBonus": "$150",
     "registrationBonusText": "For your first deposit! Use advantage of Ninecasino Welcome Bonus",
     "getBonus": "Get your bonus",
     "enterEmail": "Enter email",
