--- a/locales/de.json
+++ b/locales/de.json
@@ -2,35 +2,35 @@
   "title" : "PlayJoker",
   "buttons" : {
     "signUp" : "Erstanmeldung",
-    "register" : "registrieren",
+    "register" : "Registrieren",
     "terms" : "Bonusbedingungen",
-    "registerNow" : "jetzt registrieren",
-    "login" : "anmelden",
-    "logIn" : "anmelden",
-    "joinNow" : "mitmachen",
-    "deposit" : "einzahlung",
-    "depositNow" : "jetzt einzahlen",
-    "loadMoreGames" : "weitere spiele laden",
-    "playForFun" : "spielen zum Spaß",
+    "registerNow" : "Jetzt registrieren",
+    "login" : "Anmelden",
+    "logIn" : "Anmelden",
+    "joinNow" : "Mitmachen",
+    "deposit" : "Einzahlung",
+    "depositNow" : "Jetzt einzahlen",
+    "loadMoreGames" : "Weitere spiele laden",
+    "playForFun" : "Spielen zum Spaß",
     "playNow" : "Sofort spielen",
-    "showMore" : "mehr anzeigen",
+    "showMore" : "Mehr anzeigen",
     "saveChanges" : "Änderungen speichern",
-    "update" : "aktualisieren",
+    "update" : "Aktualisieren",
     "addLimits" : "Limits hinzufügen",
-    "filter" : "filtern",
-    "cashout" : "auszahlung",
+    "filter" : "Filtern",
+    "cashout" : "Auszahlung",
     "cancel" : "Abbrechen ",
-    "loading" : "ladend",
-    "continue" : "weiterführen",
+    "loading" : "Ladend",
+    "continue" : "Weiterführen",
     "letsStart" : "Auf geht’s!",
     "goHomePage" : "Zurück zur startseite hauptseite ",
-    "save" : "Save",
-    "edit" : "bearbeiten",
+    "save" : "Speichern",
+    "edit" : "Bearbeiten",
     "getBonus" : "Bonus erhalten"
   },
   "errors" : {
-    "required" : " pflichtangabe ",
-    "email" : "e-mail-adresse eingeben ",
+    "required" : "Pflichtangabe",
+    "email" : "E-mail-adresse eingeben ",
     "confirmPassword" : "Passwort und Bestätigungspasswort sind nicht identisch",
     "oldAndNewPasswords" : "Alte und neue Passwörter sind gleich",
     "minLength" : "Muss mindestens {num} Zeichen enthalten",
@@ -64,7 +64,7 @@
     "signUpTitle" : "Melde dich an  <span class=\"Colored\">&</span> erhalte den <br /> Begrüssungbonus",
     "forgotPassword" : "Passwort vergessen",
     "emails" : "Erhalt von E-Mail-Benachrichtigungen zu Aktionen",
-    "terms" : "Ich bin {minAge} Jahre alt und stimme  {br} {den Geschäftsbedingungen}   und  {den Datenschutzrichtlinien zu} ",
+    "terms" : "Ich bin {minAge} Jahre alt und stimme {br} {terms} und {policy} ",
     "step2Title" : "Bitte füllen Sie die untenstehenden Informationen aus! ",
     "thanksRegistration" : "Danke für die Registrierung",
     "registrationBonus" : "150 €",
@@ -94,7 +94,8 @@
       "city" : "Stadt ",
       "address" : "Anschrift",
       "postalCode" : "Postleitzahl",
-      "phone" : "Rufnummer"
+      "phone" : "Rufnummer",
+      "year": "JJJJ"
     }
   },
   "pages" : {
