--- a/locales/cs.json
+++ b/locales/cs.json
@@ -275,7 +275,8 @@
         "address": "Adresa",
         "postalCode": "Poštovní směrovací číslo",
         "phoneNumber": "Mobilní telefon"
-      }
+      },
+      "updateSuccess": "Váš profil byl úspěšně aktualizován!"
     },
     "limits" : {
       "initialText" : "Chcete sledovat svoji aktivitu, limity ztráty nebo omezit vklady? Váš účet lze nastavit se všemi limity. Pomůže vám získat přehled o vašem hazardu. Všechna omezení se projeví okamžitě.",
