--- a/locales/en.json
+++ b/locales/en.json
@@ -281,7 +281,8 @@
         "postalCode": "Postal Code",
         "phoneNumber": "Mobile phone",
         "birthDate": "Birth date"
-      }
+      },
+      "updateSuccess": "Your profile was successfully updated!"
     },
     "limits": {
       "initialText": "Do you want to track your activity, loss limits or limit deposits? Your account can be set with all limits. It'll help you to get an overview of your gambling. All restriction takes effect instantly.",
